--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,3 +1,7 @@
+<% if (signupMessage) { %>
+    <div><%= signupMessage %></div>
+<% } %>
+
 <form action="/signup" method="POST">
     <input type="text" name="name" id="name" placeholder="Insert Name">
     <input type="email" name="email" id="email" placeholder="Insert Email">
